example.php: clarified description about licenses. example.css: fixed hint not showing

--- a/example/css/example.css
+++ b/example/css/example.css
@@ -603,7 +603,7 @@ audio {
 
 .impress-enabled .hint { display: block }
 
-.impress-on-start .hint {
+.impress-on-title .hint {
         opacity: 1;
 
         -webkit-transform: translateY(0px);
